实现查询解析、校验、执行与列式存储核心
Co-Authored-By: Claude Code <noreply@anthropic.com>