@@ -2,6 +2,8 @@ package com.github.lechandonga.cqe.storage;
 
 import com.github.lechandonga.cqe.type.DataType;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /** 不可变列：类型 + 按行序排列的值，null 表示空值。 */
@@ -12,7 +14,8 @@ public class Column {
 
     public Column(DataType type, List<Object> values) {
         this.type = type;
-        this.values = List.copyOf(values);
+        // 列值允许 null，不能用 List.copyOf
+        this.values = Collections.unmodifiableList(new ArrayList<>(values));
     }
 
     public DataType type() {
